v0.5.4:Change whole project structure